--- a/css/main.css
+++ b/css/main.css
@@ -13,28 +13,28 @@ main {
 
 body {
   margin: 0;
-  font-family: Georgia;
+  font-family: Georgia, cursive;
   color: #512200;
+	text-decoration: none;
 }
 
 h1 {
   font-family: "Dosis", sans-serif;
   font-size: 1.5rem;
   color: #512200;
-  text-decoration: none;
+	margin: 1em;
 }
 
 ul {
-  text-align: left;
-  text-decoration: none;
   list-style-type: none;
   color: #512200;
+	margin: 1em;
 }
 
 p {
   color: #785439;
   font-size: 1.125rem;
-  text-decoration: none;
+	margin: 1em
 }
 
 .link-card {
@@ -48,6 +48,7 @@ p {
   margin: .5em 2em;
   padding: .3em;
   background-color: #dcd4cd;
+	border: 3px solid #fff;
   border-radius: 5px;
   border-width: 3px;
   border-color: #9a816d;
@@ -66,16 +67,19 @@ p {
 .btn-wrap {
   display: inline-block;
   background-color: #785439;
-  margin: .5em 5em;
+  margin: .5em 5.5em;
   padding: .5em;
-  max-width: 20em;
   border-radius: 8px;
   color: #f0eee8;
-  text-decoration: none;
   text-align: center;
   font-family: "Dosis", sans-serif;
   font-weight: bold;
 }
 
+.line-separator {
+	height: 1px;
+	border-bottom: 2px solid #9a816d;
+	margin: 0em 1em;
+}
 
 #785439, #cabdb2, #512200, #9a816d, #dcd4cd, #f0eee8
